--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,6 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
     <color name="blue_500">#2196F3</color>
     <color name="blue_100">#BBDEFB</color>
     <color name="light_blue">#E3F2FD</color>
@@ -13,4 +11,10 @@
     <color name="green_500">#4CAF50</color>
     <color name="purple_500">#9C27B0</color>
     <color name="gray_600">#757575</color>
+    <color name="colorPrimary">#4C84FF</color>
+    <color name="colorPrimaryDark">#2196F3</color>
+    <color name="colorAccent">#4C84FF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="gray">#757575</color>
 </resources>
