--- a/app/src/main/res/layout/activity_interest.xml
+++ b/app/src/main/res/layout/activity_interest.xml
@@ -2,161 +2,136 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="#EEF1FF"
     android:layout_height="match_parent">
 
 
+    <TextView
+        android:id="@+id/interest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_bold"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_70sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:textSize="@dimen/_16sdp"
+        android:textColor="#333B86"
+        android:text="What motivates you to stay active? "
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <ImageView
+        android:id="@+id/btnContinue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/button_state_color"
+        android:clickable="false"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_30sdp"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/ic_checked_interest"
+        app:layout_constraintEnd_toEndOf="parent"
+       />
 
     <CheckBox
         android:id="@+id/cbTrackExpenses"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
         android:background="@drawable/interest_selector"
         android:button="@null"
         android:padding="12dp"
-        android:text="a"
+        android:fontFamily="@font/montserrat_medium"
+        android:text="Improve fitness &amp; endurance"
         android:textColor="@color/interest_text_color"
-        app:layout_constraintEnd_toStartOf="@id/cbMonitorSavings"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/interest"/>
 
     <CheckBox
         android:id="@+id/cbMonitorSavings"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:background="@drawable/interest_selector"
         android:button="@null"
         android:padding="12dp"
-        android:text="monitor_savings"
+        android:fontFamily="@font/montserrat_medium"
+        android:text="Lose weight &amp; burn calories"
         android:textColor="@color/interest_text_color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/cbTrackExpenses"
-        app:layout_constraintTop_toTopOf="@id/cbTrackExpenses" />
+        app:layout_constraintTop_toBottomOf="@id/cbTrackExpenses"/>
 
     <CheckBox
         android:id="@+id/cbAnalyzeSpending"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:background="@drawable/interest_selector"
         android:button="@null"
         android:padding="12dp"
-        android:text="analyze_spending"
+        android:fontFamily="@font/montserrat_medium"
+        android:text="Stay healthy &amp; energized"
         android:textColor="@color/interest_text_color"
-        app:layout_constraintEnd_toStartOf="@id/cbOptimizeSpending"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cbTrackExpenses" />
+        app:layout_constraintTop_toBottomOf="@id/cbMonitorSavings"/>
 
     <CheckBox
         android:id="@+id/cbOptimizeSpending"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
         android:background="@drawable/interest_selector"
         android:button="@null"
         android:padding="12dp"
-        android:text="optimize_spending"
+        android:fontFamily="@font/montserrat_medium"
+        android:text="Track daily movement"
         android:textColor="@color/interest_text_color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/cbAnalyzeSpending"
-        app:layout_constraintTop_toTopOf="@id/cbAnalyzeSpending" />
+        app:layout_constraintTop_toBottomOf="@id/cbAnalyzeSpending"/>
 
     <CheckBox
         android:id="@+id/cbPlanInvestments"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:background="@drawable/interest_selector"
-        android:button="@null"
-        android:padding="12dp"
-        android:text="plan_investments"
-        android:textColor="@color/interest_text_color"
-        app:layout_constraintEnd_toStartOf="@id/cbFinancialReports"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cbAnalyzeSpending" />
-
-    <CheckBox
-        android:id="@+id/cbFinancialReports"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:background="@drawable/interest_selector"
-        android:button="@null"
-        android:padding="12dp"
-        android:text="financial_reports"
-        android:textColor="@color/interest_text_color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/cbPlanInvestments"
-        app:layout_constraintTop_toTopOf="@id/cbPlanInvestments" />
-
-    <CheckBox
-        android:id="@+id/cbTrackExpensesIncome"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:background="@drawable/interest_selector"
-        android:button="@null"
-        android:padding="12dp"
-        android:text="plan_investments"
-        android:textColor="@color/interest_text_color"
-        app:layout_constraintEnd_toStartOf="@id/cbFinancialReports"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cbPlanInvestments" />
-
-    <CheckBox
-        android:id="@+id/cbOthers"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:background="@drawable/interest_selector"
-        android:button="@null"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:padding="12dp"
-        android:text="others"
-        android:textColor="@color/interest_text_color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/cbTrackExpensesIncome"
-        app:layout_constraintTop_toTopOf="@id/cbTrackExpensesIncome" />
-
-
-    <Button
-        android:id="@+id/btnContinue"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/_40sdp"
         android:layout_marginHorizontal="@dimen/_10sdp"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="@color/button_state_color"
-        android:enabled="false"
-        android:text="continue_btn"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cbTrackExpensesIncome" />
+        android:layout_marginTop="@dimen/_10sdp"
+        android:background="@drawable/interest_selector"
+        android:button="@null"
+        android:padding="12dp"
+        android:fontFamily="@font/montserrat_medium"
+        android:text="Build a walking habit"
+        android:textColor="@color/interest_text_color"
+        app:layout_constraintTop_toBottomOf="@id/cbOptimizeSpending"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_regular"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:paddingEnd="@dimen/_70sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:textSize="@dimen/_12sdp"
+        android:textColor="#5A5A5A"
+        android:text="Please select at least 2 options to continue."
+        app:layout_constraintTop_toBottomOf="@id/cbPlanInvestments"/>
+
+
 
     <androidx.core.widget.ContentLoadingProgressBar
         android:id="@+id/btn_next_loading"
         style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="25dp"
         android:layout_height="25dp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_30sdp"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_60sdp"
         android:indeterminate="true"
         android:indeterminateTint="#1590EA"
         android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cbPlanInvestments" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <FrameLayout
         android:id="@+id/fr_ads"
