--- a/app/src/main/res/values/id_ads.xml
+++ b/app/src/main/res/values/id_ads.xml
@@ -38,7 +38,7 @@
     <string name="native_tutorial2_full" translatable="false"></string>
     <string name="native_tutorial3_full" translatable="false"></string>
 
-    <string name="open_resume" translatable="false">ca-app-pub-3940256099942544/9257395921</string>
+    <string name="open_resume" translatable="false"></string>
 
 
     <string name="AF_DEV_KEY" translatable="false">LikYKU2zUYTct7BoQ7MuJY</string>
