--- a/app/src/main/res/drawable/bg_green_language.xml
+++ b/app/src/main/res/drawable/bg_green_language.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#E6F5ED"/>
+    <solid android:color="#FFFFFF"/>
 
     <corners
         android:radius="12dp"
