--- a/app/src/main/res/drawable/bg_indicator.xml
+++ b/app/src/main/res/drawable/bg_indicator.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="62dp"
-    android:height="4dp"
-    android:viewportWidth="62"
-    android:viewportHeight="4">
+    android:width="10dp"
+    android:height="10dp"
+    android:viewportWidth="10"
+    android:viewportHeight="10">
   <path
-      android:pathData="M2,0L60,0A2,2 0,0 1,62 2L62,2A2,2 0,0 1,60 4L2,4A2,2 0,0 1,0 2L0,2A2,2 0,0 1,2 0z"
-      android:fillColor="#E2E2E2"/>
+      android:pathData="M5,5m-5,0a5,5 0,1 1,10 0a5,5 0,1 1,-10 0"
+      android:fillColor="#D9DFFD"/>
 </vector>
