--- a/app/src/main/res/drawable/ic_checked_language.xml
+++ b/app/src/main/res/drawable/ic_checked_language.xml
@@ -1,15 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="20dp"
+    android:height="20dp"
+    android:viewportWidth="20"
+    android:viewportHeight="20">
   <path
-      android:pathData="M12,12m10,0a10,10 0,1 0,-20 0a10,10 0,1 0,20 0"
-      android:fillColor="#06C270"/>
+      android:pathData="M4,0L16,0A4,4 0,0 1,20 4L20,16A4,4 0,0 1,16 20L4,20A4,4 0,0 1,0 16L0,4A4,4 0,0 1,4 0z"
+      android:fillColor="#5C66C1"/>
   <path
-      android:pathData="M16.5,9L10.5,15L7.5,12"
+      android:pathData="M5,9.286L9.125,15L16,5"
       android:strokeLineJoin="round"
-      android:strokeWidth="2"
+      android:strokeWidth="1.78947"
       android:fillColor="#00000000"
       android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
