--- a/app/src/main/res/drawable/ic_select_language.xml
+++ b/app/src/main/res/drawable/ic_select_language.xml
@@ -4,14 +4,13 @@
     android:viewportWidth="20"
     android:viewportHeight="20">
   <path
-      android:pathData="M10,0.5L10,0.5A9.5,9.5 0,0 1,19.5 10L19.5,10A9.5,9.5 0,0 1,10 19.5L10,19.5A9.5,9.5 0,0 1,0.5 10L0.5,10A9.5,9.5 0,0 1,10 0.5z"
-      android:fillColor="#ffffff"/>
+      android:pathData="M4,0L16,0A4,4 0,0 1,20 4L20,16A4,4 0,0 1,16 20L4,20A4,4 0,0 1,0 16L0,4A4,4 0,0 1,4 0z"
+      android:fillColor="#5C66C1"/>
   <path
-      android:strokeWidth="1"
-      android:pathData="M10,0.5L10,0.5A9.5,9.5 0,0 1,19.5 10L19.5,10A9.5,9.5 0,0 1,10 19.5L10,19.5A9.5,9.5 0,0 1,0.5 10L0.5,10A9.5,9.5 0,0 1,10 0.5z"
+      android:pathData="M5,9.286L9.125,15L16,5"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.78947"
       android:fillColor="#00000000"
-      android:strokeColor="#1B70F1"/>
-  <path
-      android:pathData="M10,10m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0"
-      android:fillColor="#1B70F1"/>
+      android:strokeColor="#ffffff"
+      android:strokeLineCap="round"/>
 </vector>
