--- a/app/src/main/res/drawable/ic_unchecked_language.xml
+++ b/app/src/main/res/drawable/ic_unchecked_language.xml
@@ -1,12 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="20dp"
+    android:height="20dp"
+    android:viewportWidth="20"
+    android:viewportHeight="20">
   <path
       android:strokeWidth="1"
-      android:pathData="M12,12m9.5,0a9.5,9.5 0,1 0,-19 0a9.5,9.5 0,1 0,19 0"
-      android:fillColor="#C4C6CA"
-      android:fillAlpha="0.06"
-      android:strokeColor="#26272D"/>
+      android:pathData="M4,0.5L16,0.5A3.5,3.5 0,0 1,19.5 4L19.5,16A3.5,3.5 0,0 1,16 19.5L4,19.5A3.5,3.5 0,0 1,0.5 16L0.5,4A3.5,3.5 0,0 1,4 0.5z"
+      android:fillColor="#00000000"
+      android:strokeColor="#8883AE"/>
 </vector>
