--- a/app/src/main/res/drawable/ic_unselect_language.xml
+++ b/app/src/main/res/drawable/ic_unselect_language.xml
@@ -5,8 +5,7 @@
     android:viewportHeight="20">
   <path
       android:strokeWidth="1"
-      android:pathData="M10,10m-9.5,0a9.5,9.5 0,1 1,19 0a9.5,9.5 0,1 1,-19 0"
-      android:fillColor="#ffffff"
-      android:fillAlpha="0.2"
-      android:strokeColor="#1D1E1F"/>
+      android:pathData="M4,0.5L16,0.5A3.5,3.5 0,0 1,19.5 4L19.5,16A3.5,3.5 0,0 1,16 19.5L4,19.5A3.5,3.5 0,0 1,0.5 16L0.5,4A3.5,3.5 0,0 1,4 0.5z"
+      android:fillColor="#00000000"
+      android:strokeColor="#8883AE"/>
 </vector>
