--- a/app/src/main/res/drawable/interest_selector.xml
+++ b/app/src/main/res/drawable/interest_selector.xml
@@ -2,16 +2,16 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF"/>
-            <stroke android:width="2dp" android:color="#1CA363"/>
-            <corners android:radius="40dp"/>
+            <solid android:color="#5C66C1"/>
+            <stroke android:width="2dp" android:color="#5C66C1"/>
+            <corners android:radius="8dp"/>
         </shape>
     </item>
     <item android:state_checked="false">
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF"/>
-            <stroke android:width="1dp" android:color="#E0E0E0"/>
-            <corners android:radius="40dp"/>
+            <solid android:color="#EEF1FF"/>
+            <stroke android:width="1dp" android:color="#D9DFFD"/>
+            <corners android:radius="8dp"/>
         </shape>
     </item>
 </selector>
