--- a/app/src/main/res/layout/activity_step_goal.xml
+++ b/app/src/main/res/layout/activity_step_goal.xml
@@ -2,154 +2,249 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:background="@color/white"
+    android:orientation="vertical">
 
-    <TextView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_70sdp"
+        android:background="@drawable/bg_gradient_header"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_80sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:src="@drawable/ic_back" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="2dp"
+            android:fontFamily="@font/montserrat_bold"
+            android:gravity="bottom"
+            android:text="Step Goal"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_20sdp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/_8sdp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="@string/monday_text"
+                android:textSize="@dimen/_14sdp" />
+
+            <EditText
+                android:id="@+id/mondayGoal"
+                android:layout_width="100dp"
+                android:layout_height="@dimen/_30sdp"
+                android:background="@drawable/bg_step_goal"
+                android:textColor="#5C66C1"
+                android:fontFamily="@font/montserrat_bold"
+                android:gravity="center"
+                android:text="5000"
+                android:inputType="number" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/_8sdp"
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="@string/tuesday_text"
+                android:textSize="@dimen/_14sdp" />
+
+            <EditText
+                android:id="@+id/tuesdayGoal"
+                android:layout_width="100dp"
+                android:layout_height="@dimen/_30sdp"
+                android:background="@drawable/bg_step_goal"
+                android:textColor="#5C66C1"
+                android:fontFamily="@font/montserrat_bold"
+                android:gravity="center"
+                android:text="5000"
+                android:inputType="number" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/_8sdp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="@string/wednesday_text"
+                android:textSize="@dimen/_14sdp" />
+
+            <EditText
+                android:id="@+id/wednesdayGoal"
+                android:layout_width="100dp"
+                android:layout_height="@dimen/_30sdp"
+                android:background="@drawable/bg_step_goal"
+                android:textColor="#5C66C1"
+                android:fontFamily="@font/montserrat_bold"
+                android:gravity="center"
+                android:text="5000"
+                android:inputType="number" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/_8sdp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="@string/thursday_text"
+                android:textSize="@dimen/_14sdp" />
+
+            <EditText
+                android:id="@+id/thursdayGoal"
+                android:layout_width="100dp"
+                android:layout_height="@dimen/_30sdp"
+                android:textColor="#5C66C1"
+                android:fontFamily="@font/montserrat_bold"
+                android:gravity="center"
+                android:text="5000"
+                android:background="@drawable/bg_step_goal"
+                android:inputType="number" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/_8sdp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="@string/friday_text"
+                android:textSize="@dimen/_14sdp" />
+
+            <EditText
+                android:id="@+id/fridayGoal"
+                android:layout_width="100dp"
+                android:layout_height="@dimen/_30sdp"
+                android:textColor="#5C66C1"
+                android:fontFamily="@font/montserrat_bold"
+                android:gravity="center"
+                android:text="5000"
+                android:background="@drawable/bg_step_goal"
+                android:inputType="number" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/_8sdp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="@string/saturday_text"
+                android:textSize="@dimen/_14sdp" />
+
+            <EditText
+                android:id="@+id/saturdayGoal"
+                android:layout_width="100dp"
+                android:layout_height="@dimen/_30sdp"
+                android:background="@drawable/bg_step_goal"
+                android:textColor="#5C66C1"
+                android:fontFamily="@font/montserrat_bold"
+                android:gravity="center"
+                android:text="5000"
+                android:inputType="number" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/_8sdp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="@string/sunday_text"
+                android:textSize="@dimen/_14sdp" />
+
+            <EditText
+                android:id="@+id/sundayGoal"
+                android:layout_width="100dp"
+                android:layout_height="@dimen/_30sdp"
+                android:background="@drawable/bg_step_goal"
+                android:textColor="#5C66C1"
+                android:fontFamily="@font/montserrat_bold"
+                android:gravity="center"
+                android:text="5000"
+                android:inputType="number" />
+        </LinearLayout>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/saveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Step Goal"
-        android:textSize="24sp"
-        android:layout_marginBottom="16dp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="8dp">
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/bg_button"
+        android:paddingHorizontal="@dimen/_60sdp"
+        android:paddingVertical="@dimen/_8sdp">
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Monday"/>
+            android:fontFamily="@font/montserrat_bold"
+            android:gravity="center"
+            android:text="Save"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_14sdp" />
 
-        <EditText
-            android:id="@+id/mondayGoal"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:inputType="number"/>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="8dp">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Tuesday"/>
-
-        <EditText
-            android:id="@+id/tuesdayGoal"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:inputType="number"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="8dp">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Wednesday"/>
-
-        <EditText
-            android:id="@+id/wednesdayGoal"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:inputType="number"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="8dp">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Thursday"/>
-
-        <EditText
-            android:id="@+id/thursdayGoal"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:inputType="number"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="8dp">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Friday"/>
-
-        <EditText
-            android:id="@+id/fridayGoal"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:inputType="number"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="8dp">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Saturday"/>
-
-        <EditText
-            android:id="@+id/saturdayGoal"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:inputType="number"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="8dp">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Sunday"/>
-
-        <EditText
-            android:id="@+id/sundayGoal"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:inputType="number"/>
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/saveButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Save"
-        android:layout_marginTop="16dp"/>
 
 </LinearLayout>
