--- a/app/src/main/res/layout/fragment_intro1.xml
+++ b/app/src/main/res/layout/fragment_intro1.xml
@@ -3,6 +3,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/intro1">
@@ -30,13 +31,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/_10sdp"
         android:clipToPadding="false"
-        android:gravity="center"
         android:orientation="horizontal"
-        android:paddingBottom="@dimen/_10sdp"
         android:layout_marginHorizontal="@dimen/_10sdp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_back"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintBottom_toTopOf="@+id/frAds"
+        app:layout_constraintStart_toStartOf="parent"
+       >
 
         <ImageView
             android:id="@+id/cricle_1"
@@ -72,16 +71,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:paddingHorizontal="@dimen/_30sdp"
+        android:layout_marginBottom="@dimen/_20sdp"
         android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_100sdp"
         android:fontFamily="@font/montserrat_bold"
+        android:textAlignment="center"
         android:text="@string/note_continue1"
         android:textColor="#152031"
         android:textSize="@dimen/_16sdp"
-        app:layout_constraintBottom_toBottomOf="@+id/ll_cricle"
-        app:layout_constraintBottom_toTopOf="@+id/frAds"
-        app:layout_constraintEnd_toStartOf="@id/frNext"
-        app:layout_constraintTop_toTopOf="@+id/ll_cricle" />
+        app:layout_constraintBottom_toTopOf="@+id/btn_back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+         />
 
 
     <ImageView
@@ -91,6 +92,7 @@
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         android:background="@drawable/ic_previous"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/frAds"
         app:layout_constraintEnd_toStartOf="@id/frNext"
@@ -100,11 +102,12 @@
         android:id="@+id/frNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_cricle">
+        app:layout_constraintBottom_toTopOf="@+id/frAds"
+        app:layout_constraintTop_toTopOf="@+id/ll_cricle">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -149,7 +152,8 @@
         app:layout_constraintBottom_toTopOf="@id/ll_cricle"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:lottie_rawRes="@raw/swipe_black" />
+        app:lottie_rawRes="@raw/swipe_black"
+        tools:layout_editor_absoluteX="0dp" />
 
     <FrameLayout
         android:id="@+id/frAds"
