--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -68,13 +68,28 @@
                         android:textColor="@color/white"
                         android:textSize="48sp" />
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:drawablePadding="4dp"
-                        android:fontFamily="@font/montserrat_regular"
-                        android:text="Steps"
-                        android:textColor="@color/white" />
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_step_pedo"
+                            android:layout_gravity="center"
+                            android:layout_marginEnd="@dimen/_5sdp"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawablePadding="4dp"
+                            android:fontFamily="@font/montserrat_regular"
+                            android:text="Steps"
+                            android:alpha="0.6"
+                            android:textColor="#ffffff" />
+                    </LinearLayout>
+
+
                 </LinearLayout>
             </FrameLayout>
 
@@ -87,7 +102,7 @@
                     android:id="@+id/targetText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
+                    android:layout_gravity="start"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/montserrat_bold"
                     android:text="50/6000 Steps"
@@ -98,20 +113,44 @@
                     android:id="@+id/remainingText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
+                    android:layout_gravity="start"
                     android:fontFamily="@font/montserrat_regular"
-                    android:gravity="center"
+                    android:gravity="start"
                     android:text="Walk 5950 steps more to\ncomplete your daily goal"
                     android:textColor="@color/black" />
 
-                <Button
+
+                <LinearLayout
                     android:id="@+id/startStopButton"
-                    android:layout_width="match_parent"
+                    android:layout_width="@dimen/_130sdp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:background="@drawable/rounded_button"
-                    android:text="Continue"
-                    android:textColor="#5C66C1" />
+                    android:paddingHorizontal="@dimen/_15sdp"
+                    android:paddingVertical="@dimen/_10sdp"
+                    android:background="@drawable/bg_white"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/ic_play"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_play"
+                        android:layout_marginEnd="@dimen/_5sdp"/>
+
+                    <TextView
+                        android:id="@+id/tv_play"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:textColor="#5C66C1"
+                        android:fontFamily="@font/montserrat_bold"
+                        android:text="Continue"
+                        />
+
+                </LinearLayout>
+
+
 
             </LinearLayout>
 
@@ -277,8 +316,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat_medium"
             android:text="Your daily goals"
-            android:textSize="@dimen/_12sdp"
-            android:textColor="#5A5A5A" />
+            android:textColor="#5A5A5A"
+            android:textSize="@dimen/_12sdp" />
 
         <View
             android:layout_width="0dp"
@@ -299,9 +338,9 @@
         android:id="@+id/dailyGoalsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/_10sdp"
         android:background="#EEF1FF"
         android:orientation="vertical"
-        android:layout_marginHorizontal="@dimen/_10sdp"
         app:layout_constraintTop_toBottomOf="@+id/header">
 
 
@@ -333,10 +372,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="M"
-                    android:textSize="@dimen/_12sdp"
                     android:textColor="#000000"
-                    android:fontFamily="@font/montserrat_bold" />
+                    android:textSize="@dimen/_12sdp" />
             </LinearLayout>
 
             <!-- Repeat cho T, W, T, F, S, S -->
@@ -358,11 +397,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="T"
                     android:textColor="#000000"
-                    android:fontFamily="@font/montserrat_bold"
-                    android:textSize="@dimen/_12sdp"
-                     />
+                    android:textSize="@dimen/_12sdp" />
             </LinearLayout>
 
             <!-- WED -->
@@ -384,11 +422,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="W"
                     android:textColor="#000000"
-                    android:fontFamily="@font/montserrat_bold"
-                    android:textSize="@dimen/_12sdp"
-                     />
+                    android:textSize="@dimen/_12sdp" />
             </LinearLayout>
 
             <!-- T -->
@@ -410,11 +447,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:text="T"
-                    android:textSize="@dimen/_12sdp"
-                    android:textColor="#000000"
                     android:fontFamily="@font/montserrat_bold"
-                     />
+                    android:text="T"
+                    android:textColor="#000000"
+                    android:textSize="@dimen/_12sdp" />
             </LinearLayout>
 
             <!-- F -->
@@ -436,11 +472,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="F"
                     android:textColor="#000000"
-                    android:fontFamily="@font/montserrat_bold"
-                    android:textSize="@dimen/_12sdp"
-                    />
+                    android:textSize="@dimen/_12sdp" />
             </LinearLayout>
 
             <!-- S -->
@@ -462,12 +497,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="S"
                     android:textColor="#000000"
                     android:textSize="@dimen/_12sdp"
-                    android:fontFamily="@font/montserrat_bold"
 
-                     />
+                    />
             </LinearLayout>
 
             <!-- S -->
@@ -489,12 +524,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="S"
                     android:textColor="#000000"
                     android:textSize="@dimen/_12sdp"
-                    android:fontFamily="@font/montserrat_bold"
 
-                     />
+                    />
 
             </LinearLayout>
 
@@ -518,9 +553,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Report"
-                android:textSize="@dimen/_12sdp"
                 android:textColor="#5A5A5A"
-                />
+                android:textSize="@dimen/_12sdp" />
 
             <View
                 android:layout_width="0dp"
@@ -541,7 +575,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:elevation="2dp"
+            android:background="@drawable/bg_white"
             android:orientation="vertical"
             android:padding="16dp">
 
@@ -551,21 +585,21 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-                <!--                <ImageView-->
-                <!--                    android:src="@drawable/ic_running"-->
-                <!--                    android:layout_width="24dp"-->
-                <!--                    android:layout_height="24dp" />-->
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_running" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="February 2025"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
             </LinearLayout>
 
-            <!-- Metrics -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -573,7 +607,6 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
-                <!-- Hours -->
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -581,31 +614,30 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <!--                    <ImageView-->
-                    <!--                        android:src="@drawable/ic_clock"-->
-                    <!--                        android:layout_width="24dp"-->
-                    <!--                        android:layout_height="24dp"-->
-                    <!--                        />-->
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_clock" />
 
                     <TextView
                         android:id="@+id/hoursTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
+                        android:fontFamily="@font/montserrat_bold"
                         android:text="00:01:07"
-                        android:textColor="@color/black"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        android:textColor="#434343"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Hours"
-                        android:textColor="#999999"
+                        android:textColor="#5A5A5A"
+                        android:fontFamily="@font/montserrat_medium"
                         android:textSize="12sp" />
                 </LinearLayout>
 
-                <!-- Steps -->
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -613,31 +645,30 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <!--                    <ImageView-->
-                    <!--                        android:src="@drawable/ic_steps"-->
-                    <!--                        android:layout_width="24dp"-->
-                    <!--                        android:layout_height="24dp"-->
-                    <!--                        />-->
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_steps" />
 
                     <TextView
                         android:id="@+id/stepsTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
+                        android:fontFamily="@font/montserrat_bold"
                         android:text="5000000"
-                        android:textColor="@color/black"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        android:textColor="#434343"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Steps"
-                        android:textColor="#999999"
+                        android:textColor="#5A5A5A"
+                        android:fontFamily="@font/montserrat_medium"
                         android:textSize="12sp" />
                 </LinearLayout>
 
-                <!-- Kcal -->
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -645,31 +676,29 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <!--                    <ImageView-->
-                    <!--                        android:src="@drawable/ic_fire"-->
-                    <!--                        android:layout_width="24dp"-->
-                    <!--                        android:layout_height="24dp"-->
-                    <!--                       />-->
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_fire" />
 
                     <TextView
                         android:id="@+id/kcalTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
+                        android:fontFamily="@font/montserrat_bold"
                         android:text="3520000"
-                        android:textColor="@color/black"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        android:textColor="#434343"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Kcal"
-                        android:textColor="#999999"
-                        android:textSize="12sp" />
+                        android:textColor="#5A5A5A"
+                        android:fontFamily="@font/montserrat_medium"                        android:textSize="12sp" />
                 </LinearLayout>
 
-                <!-- Km -->
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -677,27 +706,27 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <!--                    <ImageView-->
-                    <!--                        android:src="@drawable/ic_ruler"-->
-                    <!--                        android:layout_width="24dp"-->
-                    <!--                        android:layout_height="24dp"-->
-                    <!--                        android:tint="#5A62FF"/>-->
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_ruler" />
 
                     <TextView
                         android:id="@+id/kmTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
+                        android:fontFamily="@font/montserrat_bold"
                         android:text="600000"
-                        android:textColor="@color/black"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        android:textColor="#434343"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Km"
-                        android:textColor="#999999"
+                        android:textColor="#5A5A5A"
+                        android:fontFamily="@font/montserrat_medium"
                         android:textSize="12sp" />
                 </LinearLayout>
 
