--- a/app/src/main/res/layout/item_not_collapse.xml
+++ b/app/src/main/res/layout/item_not_collapse.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/llNotColap"
+    android:background="@drawable/bg_green_language"
     android:orientation="vertical">
 
     <RelativeLayout
