--- a/app/src/main/res/drawable/bg_ads_intro1.xml
+++ b/app/src/main/res/drawable/bg_ads_intro1.xml
@@ -4,8 +4,8 @@
         <shape android:shape="rectangle">
             <gradient
                 android:angle="225"
-                android:startColor="#24B26D"
-                android:endColor="#24B26D"
+                android:startColor="#FF9D23"
+                android:endColor="#FF9D23"
                 android:type="linear"/>
             <corners android:radius="16dp"/>
         </shape>
